Added integration test with dynamo db